fixed a chance graph not showing

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@
 #need_o2 g:nth-child(-n+74){
   fill: red;
 }
-#not_fot_everyone g:nth-child(-n+63){
+#not_for_everyone g:nth-child(-n+63){
   fill: red;
 }
 #other_med g:nth-child(-n+82){
